# FluxMod-Backend

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
api2/: __init__.py  debug.py  globals.py
api2/database/: automod.py  guilds.py  mongo.py  warns.py
api2/routes/: auth.py  guilds.py
api2/services/: data_store.py  validators.py
api2/utils/: datawrapper.py
